--- a/app/blog-home/blog-home.component.html
+++ b/app/blog-home/blog-home.component.html
@@ -11,8 +11,8 @@
 <main class="container">
     <div class="row main-row">
         <div class="col-sm-10">
-            <div class="filter-bar">
-                <h3>I want to put some kind of search bar and filter options for the blog posts here</h3>
+            <div class="filter-bar" *ngIf='admin == true'>
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#editModal">Create New</button>
             </div>
             <div class="row" *ngIf='posts && posts.length'>
                 <div class="col-sm-12" *ngFor='let post of posts'>
@@ -37,5 +37,5 @@
         </div>
     </div>
 </main>
-<blog-editModal></blog-editmodal>
+<blog-editmodal></blog-editmodal>
 <hr>
